--- a/content/publication/journal-article/cite.bib
+++ b/content/publication/journal-article/cite.bib
@@ -1,10 +1,8 @@
-@article{article,
-author = {Bhatti, Shahzad and Fan, Jiahao and \textbf{Kangrui Wang} and Gao, Xiaofeng and wu, Fan and Chen, Guihai},
-year = {2020},
-month = {04},
-pages = {1-1},
-title = {An Approximation Algorithm for Bounded Task Assignment Problem in Spatial Crowdsourcing},
-volume = {PP},
-journal = {IEEE Transactions on Mobile Computing},
-doi = {10.1109/TMC.2020.2984380}
+@article{example2,
+  title = {An example journal article},
+  author={Bighetti, Nelson and Ford, Robert},
+  journal = {Journal of Source Themes},
+  year    = 2015,
+  volume  = 1,
+  number  = 1
 }
