--- a/content/publication/conference-paper/cite.bib
+++ b/content/publication/conference-paper/cite.bib
@@ -1,19 +1,8 @@
-
-
-@inproceedings{
-anonymous2023formulating,
-title={Formulating and Proving the Trend of {DNN}s Learning Simple Concepts},
-author={Dongrui Liu and Huiqi Deng and Xu Cheng and Qihan Ren and \textbf{Kangrui Wang} and Quanshi Zhang},
-booktitle={Submitted to The Eleventh International Conference on Learning Representations },
-year={2023},
-note={under review}
-}
-
-@inproceedings{
-anonymous2023temporary,
-title={Temporary feature collapse phenomenon in early learning of {MLP}s},
-author={Dongrui Liu and Shaobo Wang and Jie Ren and \textbf{Kangrui Wang} and Sheng Yin and Huiqi Deng and Quanshi Zhang},
-booktitle={Submitted to The Eleventh International Conference on Learning Representations },
-year={2023},
-note={under review}
+@inproceedings{example1,
+  title={An example conference paper},
+  author={Bighetti, Nelson and Ford, Robert},
+  booktitle={Source Themes Conference},
+  pages={1--6},
+  year={2013},
+  organization={IEEE}
 }
